fix time displaying in negative seconds, fixed contrast in light mode for the hamburger menu

--- a/src/styles/AppLight.scss
+++ b/src/styles/AppLight.scss
@@ -31,6 +31,10 @@
     display: flex;
   }
 
+  .hamburgerButton{
+    color: var(--buttonText);
+  }
+
   .navButton:active {
     background-color: #ffffff28;
     color: white;
